docs(lossDamage): add in zenodo links

--- a/notebooks/lossDamageNb/lossDamage.qmd
+++ b/notebooks/lossDamageNb/lossDamage.qmd
@@ -248,6 +248,14 @@ averages and cumulative totals of farms and % of revenue affected, allowing
 comparison of historical and future exposure to extreme climate events across
 Africa.
 
+## Data availability
+
+A significant amount of data was developed for this notebook. The data for farm
+projections can be found [here](https://doi.org/10.5281/zenodo.17583015).
+
+The initial data and shiny app code for this notebook can be found
+[here](https://doi.org/10.5281/zenodo.17584804).
+
 ## Additional methods
 
 More information on methods for farm projections estimates are available at this
