fix(yaml): fix page title

--- a/notebooks/lossDamageNb/lossDamage.qmd
+++ b/notebooks/lossDamageNb/lossDamage.qmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: "Atlas Loss and Damage Notebook"
+page-title: "Atlas Loss and Damage Notebook"
 nb-authors:
   - Zia Mehrabi
   - Ginni Braich
