Update TOC implementation: use new fixed sidebar TOC from template branch on left side

--- a/docs/nb_guidelines.qmd
+++ b/docs/nb_guidelines.qmd
@@ -70,18 +70,17 @@ We have put together a table of contents function that should be used across not
 ```{ojs}
 //| echo: true
 //| code-fold: show
-import { atlasTOC } from "/helpers/uiComponents.ojs"
+import { atlasTOC, tocStyle } from "/helpers/toc.ojs"
 
 toc_bottom = atlasTOC({
   skip: ['notebook-title', 'appendix', 'source-code'], // heading ids to skip
-  heading: `<b>In This Notebook</b>`,
+  heading: `In This Notebook`,
   selector: "h1", // Selectors to include (e.g., "h1,h2,h3")
 })
 
 htl.html`
-      <div class='floating-toc'>
+      ${tocStyle}
       ${toc_bottom}
-      </div>
       `
 ```
 
@@ -360,7 +359,8 @@ To import a local JS module or code in an OJS file (documented [here](https://qu
 ```{ojs}
 import { lang as Lang } from "/helpers/lang.js"
 
-import { atlasTOC, atlasHero  } from "/helpers/uiComponents.ojs"
+import { atlasHero } from "/helpers/uiComponents.ojs"
+import { atlasTOC } from "/helpers/toc.ojs"
 ```
 ````
 
