--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -18,7 +18,8 @@ cis = await FileAttachment(
 
 ```{ojs}
 // Import all UI components FIRST before any cells that use them
-import { atlasTOC, atlasHero, downloadButton } from "/helpers/uiComponents.ojs";
+import { atlasHero, downloadButton } from "/helpers/uiComponents.ojs";
+import { atlasTOC, tocStyle } from "/helpers/toc.ojs";
 import { dropdownInput as multiSelect, dropdownCSS } from "/helpers/multiSelect.ojs";
 ```
 
@@ -225,13 +226,12 @@ overviewContent = _lang(cis.overviewContent);
 ```{ojs}
 toc_bottom = atlasTOC({
   skip: ["notebook-title", "appendix", "source-code"], // These should be the section headings in the {# headings}
-  heading: `<b>${Lang.toSentenceCase(_lang(general_translations.toc))}</b>`,
+  heading: `${Lang.toSentenceCase(_lang(general_translations.toc))}`,
 });
 
 htl.html`
-      <div class='floating-toc'>
+      ${tocStyle}
       ${toc_bottom}
-      </div>
       `;
 ```
 
