Refactor admin selectors: add inline synchronized selectors to all sections and move TOC to right side
- Remove floating sidebar admin selectors
- Add inline admin selectors to all sections (1.1, 1.2, 1.3, 1.4, 2, 3.1)
- Create synchronized selector system using reactive values
- All selectors stay connected and update together across sections
- Move TOC to right side of page
- Add helper function for creating synchronized selectors

--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -10,6 +10,37 @@ section2Intro = _lang(cis.section2Intro)
 ```{ojs}
 //| echo: false
 
+// Synchronized admin selectors for Section 2 - these sync with the master selectors
+// Note: createSyncedAdminSelector is defined in _cis_readiness_index.qmd
+viewof s2Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, selectedAdmin0Value, uniqueAdmin0.map(d => ({ value: d, label: d })), "s2", "admin0Label", "admin0Placeholder")
+
+viewof s2Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, selectedAdmin1Value, admin1Options.map(d => ({ value: d, label: d })), "s2", "admin1Label", "admin1Placeholder")
+
+viewof s2Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, selectedAdmin2Value, admin2Options.map(d => ({ value: d, label: d })), "s2", "admin2Label", "admin2Placeholder")
+```
+
+```{ojs}
+//| echo: false
+
+// Inline admin level selectors for this section - Region Selection
+htl.html`
+<div style="display: flex; flex-wrap: wrap; gap: 15px; margin-bottom: 20px; padding: 15px; background: #f8f9fa; border-radius: 6px;">
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s2Admin0}
+  </div>
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s2Admin1}
+  </div>
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s2Admin2}
+  </div>
+</div>
+`
+```
+
+```{ojs}
+//| echo: false
+
 // ============================================================================
 // SECTION 2: CIS READINESS × CLIMATE HAZARD INTERSECTION
 // ============================================================================
