--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -171,7 +171,8 @@ dropdownCSS
 ```
 
 ```{ojs}
-// Admin level selectors
+// Admin level selectors - Master selectors
+// These are the source of truth for all admin selections
 viewof selectedAdmin0 = multiSelect({
   inputLabel: _lang(cis.admin0Label),
   inputId: "admin0Select",
@@ -180,6 +181,9 @@ viewof selectedAdmin0 = multiSelect({
   selected: [],
   maxSelections: 10
 })
+
+// Reactive value that all selectors sync to
+selectedAdmin0Value = selectedAdmin0
 ```
 
 ```{ojs}
@@ -193,6 +197,9 @@ viewof selectedAdmin1 = multiSelect({
   selected: [],
   maxSelections: 10
 })
+
+// Reactive value that all selectors sync to
+selectedAdmin1Value = selectedAdmin1
 ```
 
 ```{ojs}
@@ -206,6 +213,48 @@ viewof selectedAdmin2 = multiSelect({
   selected: [],
   maxSelections: 10
 })
+
+// Reactive value that all selectors sync to
+selectedAdmin2Value = selectedAdmin2
+```
+
+```{ojs}
+// Helper function to create synchronized admin selectors
+function createSyncedAdminSelector(level, masterView, masterValue, options, uniqueId, labelKey, placeholderKey) {
+  const selector = multiSelect({
+    inputLabel: _lang(cis[labelKey]),
+    inputId: `admin${level}Select-${uniqueId}`,
+    placeholderText: _lang(cis[placeholderKey]),
+    options: options,
+    selected: masterValue.slice(),
+    maxSelections: 10
+  });
+  
+  // When this selector changes, update the master
+  selector.addEventListener('input', () => {
+    masterView.value = selector.value;
+  });
+  
+  // Watch master value and update selector when it changes
+  // This makes the cell reactive to masterValue changes
+  masterValue; // Reference to make reactive
+  
+  // Update selector if master changed
+  const currentValue = selector.value.join(',');
+  const masterValueStr = masterValue.join(',');
+  if (currentValue !== masterValueStr) {
+    selector.value = masterValue.slice();
+    // Find the hidden select input and update it
+    const selectInput = selector.querySelector('.dropdown-select');
+    if (selectInput) {
+      selectInput.value = masterValue;
+      // Trigger update to refresh placeholder
+      selector.dispatchEvent(new CustomEvent("input", { bubbles: true }));
+    }
+  }
+  
+  return selector;
+}
 ```
 
 ```{ojs}
@@ -285,6 +334,25 @@ section11Content = _lang(cis.section11Content)
 ```
 
 `{ojs} section11Content`
+
+```{ojs}
+//| echo: false
+
+// Inline admin level selectors for this section - Region Selection
+htl.html`
+<div style="display: flex; flex-wrap: wrap; gap: 15px; margin-bottom: 20px; padding: 15px; background: #f8f9fa; border-radius: 6px;">
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof selectedAdmin0}
+  </div>
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof selectedAdmin1}
+  </div>
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof selectedAdmin2}
+  </div>
+</div>
+`
+```
 
 ```{ojs}
 // Section 1.1 Controls
@@ -664,6 +732,36 @@ section12Content = _lang(cis.section12Content)
 `{ojs} section12Content`
 
 ```{ojs}
+//| echo: false
+
+// Synchronized admin selectors for Section 1.2 - these sync with the master selectors
+viewof s12Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, selectedAdmin0Value, uniqueAdmin0.map(d => ({ value: d, label: d })), "s12", "admin0Label", "admin0Placeholder")
+
+viewof s12Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, selectedAdmin1Value, admin1Options.map(d => ({ value: d, label: d })), "s12", "admin1Label", "admin1Placeholder")
+
+viewof s12Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, selectedAdmin2Value, admin2Options.map(d => ({ value: d, label: d })), "s12", "admin2Label", "admin2Placeholder")
+```
+
+```{ojs}
+//| echo: false
+
+// Inline admin level selectors for this section - Region Selection
+htl.html`
+<div style="display: flex; flex-wrap: wrap; gap: 15px; margin-bottom: 20px; padding: 15px; background: #f8f9fa; border-radius: 6px;">
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s12Admin0}
+  </div>
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s12Admin1}
+  </div>
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s12Admin2}
+  </div>
+</div>
+`
+```
+
+```{ojs}
 // Section 1.2 Controls
 viewof s12ViewType = Inputs.radio(["Map", "Table"], {
   label: _lang(cis.viewTypeLabel),
@@ -898,6 +996,36 @@ section13Content = _lang(cis.section13Content)
 ```
 
 `{ojs} section13Content`
+
+```{ojs}
+//| echo: false
+
+// Synchronized admin selectors for Section 1.3 - these sync with the master selectors
+viewof s13Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, selectedAdmin0Value, uniqueAdmin0.map(d => ({ value: d, label: d })), "s13", "admin0Label", "admin0Placeholder")
+
+viewof s13Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, selectedAdmin1Value, admin1Options.map(d => ({ value: d, label: d })), "s13", "admin1Label", "admin1Placeholder")
+
+viewof s13Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, selectedAdmin2Value, admin2Options.map(d => ({ value: d, label: d })), "s13", "admin2Label", "admin2Placeholder")
+```
+
+```{ojs}
+//| echo: false
+
+// Inline admin level selectors for this section - Region Selection
+htl.html`
+<div style="display: flex; flex-wrap: wrap; gap: 15px; margin-bottom: 20px; padding: 15px; background: #f8f9fa; border-radius: 6px;">
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s13Admin0}
+  </div>
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s13Admin1}
+  </div>
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s13Admin2}
+  </div>
+</div>
+`
+```
 
 ```{ojs}
 // Section 1.3 Controls
@@ -1139,6 +1267,36 @@ section14Content = _lang(cis.section14Content)
 ```
 
 `{ojs} section14Content`
+
+```{ojs}
+//| echo: false
+
+// Synchronized admin selectors for Section 1.4 - these sync with the master selectors
+viewof s14Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, selectedAdmin0Value, uniqueAdmin0.map(d => ({ value: d, label: d })), "s14", "admin0Label", "admin0Placeholder")
+
+viewof s14Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, selectedAdmin1Value, admin1Options.map(d => ({ value: d, label: d })), "s14", "admin1Label", "admin1Placeholder")
+
+viewof s14Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, selectedAdmin2Value, admin2Options.map(d => ({ value: d, label: d })), "s14", "admin2Label", "admin2Placeholder")
+```
+
+```{ojs}
+//| echo: false
+
+// Inline admin level selectors for this section - Region Selection
+htl.html`
+<div style="display: flex; flex-wrap: wrap; gap: 15px; margin-bottom: 20px; padding: 15px; background: #f8f9fa; border-radius: 6px;">
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s14Admin0}
+  </div>
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s14Admin1}
+  </div>
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s14Admin2}
+  </div>
+</div>
+`
+```
 
 ```{ojs}
 // Section 1.4 Controls
