--- a/notebooks/cis/_cis_implementation.qmd
+++ b/notebooks/cis/_cis_implementation.qmd
@@ -13,6 +13,37 @@ section31Intro = _lang(cis.section31Intro)
 ```{ojs}
 //| echo: false
 
+// Synchronized admin selectors for Section 3 - these sync with the master selectors
+// Note: createSyncedAdminSelector is defined in _cis_readiness_index.qmd
+viewof s3Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, selectedAdmin0Value, uniqueAdmin0.map(d => ({ value: d, label: d })), "s3", "admin0Label", "admin0Placeholder")
+
+viewof s3Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, selectedAdmin1Value, admin1Options.map(d => ({ value: d, label: d })), "s3", "admin1Label", "admin1Placeholder")
+
+viewof s3Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, selectedAdmin2Value, admin2Options.map(d => ({ value: d, label: d })), "s3", "admin2Label", "admin2Placeholder")
+```
+
+```{ojs}
+//| echo: false
+
+// Inline admin level selectors for this section - Region Selection
+htl.html`
+<div style="display: flex; flex-wrap: wrap; gap: 15px; margin-bottom: 20px; padding: 15px; background: #f8f9fa; border-radius: 6px;">
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s3Admin0}
+  </div>
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s3Admin1}
+  </div>
+  <div style="flex: 1; min-width: 200px;">
+    ${viewof s3Admin2}
+  </div>
+</div>
+`
+```
+
+```{ojs}
+//| echo: false
+
 // ============================================================================
 // SECTION 3.1: CIS READINESS × ACCESS INTERSECTION
 // ============================================================================
